# WQS-IMS

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
database/: schema.sql
scripts/: build.rs  install.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  barcode.rs  cli.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  notification.rs  offline.rs  printer.rs
src/components/layout/: CommandPalette.tsx  Layout.tsx  NotificationsPanel.tsx  ProtectedRoute.tsx  Sidebar.tsx  Topbar.tsx
src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  DataTable.tsx  DropdownMenu.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Progress.tsx  Select.tsx  Skeleton.tsx  Tabs.tsx  Textarea.tsx
src/lib/: tauri.ts  utils.ts
src/pages/: Dashboard.tsx  Settings.tsx
src/pages/auth/: GetStarted.tsx  Login.tsx  Register.tsx
src/pages/customers/: Customers.tsx
src/pages/inventory/: Categories.tsx  ProductForm.tsx  Products.tsx  StockLevels.tsx  StockMovements.tsx
src/pages/legal/: PrivacyPolicy.tsx  TermsOfService.tsx
src/pages/purchases/: PurchaseOrderForm.tsx  PurchaseOrders.tsx
src/pages/sales/: SalesOrders.tsx
src/pages/suppliers/: Suppliers.tsx
src/pages/warehouse/: Warehouses.tsx
src/stores/: auth-store.ts  settings-store.ts  ui-store.ts
src/types/: index.ts  tauri.d.ts
