[package]
name = "wqs-ims"
version = "1.0.0"
description = "WQS Enterprise Inventory Management System"
authors = ["Wise Quotient Soft"]
edition = "2021"

[lib]
name = "wqs_ims_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "uuid", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.16"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1.52"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1.36", features = ["serde"] }

[package.metadata]
name = "WQS IMS"
description = "WQS Enterprise Inventory Management System"
authors = ["Wise Quotient Soft"]
homepage = "https://wqs-ims.com"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
